// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders bold text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="left"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="bold"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders regular text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="left"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "inherit" 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="inherit"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "auto",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "initial" 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="initial"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "auto",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders text with display content center aligned 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="center"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders text with display content right aligned 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={false}
    _letterSpacing="small"
    align="right"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "right",
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> renders underlined text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    _isUnderlined={true}
    _letterSpacing="small"
    align="left"
    color="shade.980"
    size="large"
    style={
      Array [
        Object {
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "underline",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;
